syntax = "proto3";

option go_package = "github.com/smartcontractkit/chainlink-common/pkg/loop/internal/pb";

package loop;

import "google/protobuf/empty.proto";

message AccountsCSARequest {
  // empty
}

message AccountsCSAResponse {
  repeated string accounts = 1;
}

message SignCSARequest {
  string id = 1;
  bytes data = 2;
}

message SignCSAResponse {
  bytes signed = 1;
}

service CSASigner {
  rpc Accounts(AccountsCSARequest) returns (AccountsCSAResponse);
  rpc Sign(SignCSARequest) returns (SignCSAResponse);
}